# PyExtractFiles

./: pyproject.toml  setup.cfg  setup.py
PyExtractFiles/: ReadMe.txt  __main__.py  text.py
